[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sarpro"
version = "0.1.0"
description = "SAR Processing Library"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "affine>=2.4.0",
    "attrs>=25.4.0",
    "certifi>=2026.1.4",
    "click>=8.3.1",
    "cligj>=0.7.2",
    "colorama>=0.4.6",
    "cupy>=13.0.0",
    "fastrlock>=0.8.2",
    "numpy>=2.4.2",
    "packaging>=24.0",
    "pyparsing>=3.3.2",
    "pyproj>=3.7.2",
    "python-dotenv>=1.2.1",
    "rasterio>=1.5.0",
    "scipy>=1.17.0",
]

[project.optional-dependencies]
gpu = ["cupy>=13.0.0", "fastrlock>=0.8.2"]


[project.urls]
Homepage = "https://github.com/ariastechsolutions/ARIASARG"
Repository = "https://github.com/ariastechsolutions/ARIASARG"

